--- a/res/xml/settings.xml
+++ b/res/xml/settings.xml
@@ -8,12 +8,12 @@
                 android:title="@string/gps_accuracy"
                 android:dialogTitle="@string/gps_accuracy_description"
                 android:defaultValue="@string/gps_accuracy_default"
-                android:hint="@string/gps_accuracy_hint"
                 android:inputType="number"
                 />
         <EditTextPreference
                 android:key="gps_min_distance_preference"
                 android:title="@string/gps_min_distance"
+                android:dialogTitle="@string/gps_min_distance_description"
                 android:defaultValue="@string/gps_min_distance_default"
                 android:inputType="numberDecimal"
                 android:digits="0123456789"
@@ -21,6 +21,7 @@
         <EditTextPreference
                 android:key="gps_min_time_preference"
                 android:title="@string/gps_min_time"
+                android:dialogTitle="@string/gps_min_time_description"
                 android:defaultValue="@string/gps_min_time_default"
                 android:inputType="numberDecimal"
                 android:digits="0123456789"
@@ -32,6 +33,7 @@
         <EditTextPreference
                 android:key="ap_min_range_preference"
                 android:title="@string/ap_min_range"
+                android:dialogTitle="@string/ap_min_range_description"
                 android:defaultValue="@string/ap_min_range_default"
                 android:inputType="numberDecimal"
                 android:digits="0123456789"
@@ -39,6 +41,7 @@
         <EditTextPreference
                 android:key="ap_moved_range_preference"
                 android:title="@string/ap_moved_range"
+                android:dialogTitle="@string/ap_moved_range_description"
                 android:defaultValue="@string/ap_moved_range_default"
                 android:inputType="numberDecimal"
                 android:digits="0123456789"
@@ -46,6 +49,7 @@
         <EditTextPreference
                 android:key="ap_moved_guard_preference"
                 android:title="@string/ap_moved_guard"
+                android:dialogTitle="@string/ap_moved_guard_description"
                 android:defaultValue="@string/ap_moved_guard_default"
                 android:inputType="numberDecimal"
                 android:digits="0123456789"
