Display count of APs in database. (Issue 6)
Signed-off-by: Tod Fitch <Tod@FitchDesign.com>

--- a/res/xml/settings.xml
+++ b/res/xml/settings.xml
@@ -55,4 +55,13 @@
                 android:digits="0123456789"
                 />
     </PreferenceCategory>
+
+    <EditTextPreference
+            android:key="db_size_preference"
+            android:title="@string/db_size_label"
+            android:dialogTitle="not used"
+            android:defaultValue=""
+            android:inputType="numberDecimal"
+            android:enabled="false"
+            />
 </PreferenceScreen>
