--- a/app/src/main/res/values/libraries.xml
+++ b/app/src/main/res/values/libraries.xml
@@ -83,4 +83,31 @@
     <!-- License section -->
     <string name="library_gson_licenseId">apache_2_0</string>
     <!-- Custom variables section -->
+
+    <string name="define_supportpreferencefragment"></string>
+    <!-- Author section -->
+    <string name="library_supportpreferencefragment_author">Machinarius</string>
+    <string name="library_supportpreferencefragment_authorWebsite">https://github.com/Machinarius
+    </string>
+    <!-- Library section -->
+    <string name="library_supportpreferencefragment_libraryName">Support PreferenceFragment</string>
+    <string name="library_supportpreferencefragment_libraryDescription">Unofficial
+        PreferenceFragment compatibility layer for Android 1.6 and up.
+    </string>
+    <string name="library_supportpreferencefragment_libraryWebsite">
+        https://github.com/Machinarius/PreferenceFragment-Compat/blob/master/README.md
+    </string>
+    <string name="library_supportpreferencefragment_libraryVersion">0.1.1</string>
+    <!-- OpenSource section -->
+    <string name="library_supportpreferencefragment_isOpenSource">true</string>
+    <string name="library_supportpreferencefragment_repositoryLink">
+        https://github.com/Machinarius/PreferenceFragment-Compat
+    </string>
+    <!-- ClassPath for autoDetect section -->
+    <string name="library_supportpreferencefragment_classPath">
+        com.github.machinarius.preferencefragment
+    </string>
+    <!-- License section -->
+    <string name="library_supportpreferencefragment_licenseId">apache_2_0</string>
+    <!-- Custom variables section -->
 </resources>
