Track new/changed APs
Added a bit field based changed data field to track which samples
have not been exported. Also protect against crash on start up if
scan of APs has been completed before database was opened.

Signed-off-by: Tod Fitch <Tod@FitchDesign.com>

--- a/app/src/main/res/xml/main.xml
+++ b/app/src/main/res/xml/main.xml
@@ -9,6 +9,10 @@
         android:title="@string/db_size_label" />
 
     <Preference
+        android:key="db_change_preference"
+        android:title="@string/db_change_label" />
+
+    <Preference
         android:enabled="@bool/is_kitkat_or_later"
         android:key="db_import"
         android:title="@string/data_import" />
