Allow export of changed data only.
Signed-off-by: Tod Fitch <Tod@FitchDesign.com>

--- a/app/src/main/res/xml/main.xml
+++ b/app/src/main/res/xml/main.xml
@@ -21,5 +21,9 @@
         android:enabled="@bool/is_kitkat_or_later"
         android:key="db_export"
         android:title="@string/data_export" />
+    <Preference
+        android:enabled="@bool/is_kitkat_or_later"
+        android:key="db_export_changed"
+        android:title="@string/data_export_changed" />
 
 </PreferenceScreen>
