Add reset database option
This fixes https://github.com/n76/wifi_backend/issues/44

--- a/app/src/main/res/xml/main.xml
+++ b/app/src/main/res/xml/main.xml
@@ -18,6 +18,10 @@
         android:title="@string/data_import" />
 
     <Preference
+        android:key="db_reset"
+        android:title="@string/data_reset" />
+
+    <Preference
         android:enabled="@bool/is_kitkat_or_later"
         android:key="db_export"
         android:title="@string/data_export_all" />
