--- a/app/src/main/res/layout/activity_wifi_list.xml
+++ b/app/src/main/res/layout/activity_wifi_list.xml
@@ -10,6 +10,14 @@
 
     <include layout="@layout/toolbar" />
 
+    <EditText
+        android:hint="@string/wifi_list_seach_hint"
+        android:inputType="textFilter"
+        android:layout_margin="@dimen/view_margin"
+        android:id="@+id/search_term"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/wifi_list"
         android:layout_width="match_parent"
