Add scrollbars to access point list

--- a/app/src/main/res/layout/activity_wifi_list.xml
+++ b/app/src/main/res/layout/activity_wifi_list.xml
@@ -19,6 +19,7 @@
         android:layout_height="wrap_content" />
 
     <android.support.v7.widget.RecyclerView
+        android:scrollbars="vertical"
         android:id="@+id/wifi_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
